# implementation-of-cmake-examples

./: .gitignore  README.md  cmake-example-and-implementation-wp.code-workspace  neglectbuild.gitignore
01A/: CMakeLists.txt  main.cpp
01B/: CMakeLists.txt
01B/src/: hello.cpp  main.cpp
01C/: CMakeLists.txt
01C/include/static/: Hello.h
01C/src/: Hello.cpp  main.cpp
01D/: CMakeLists.txt
01D/include/shared/: Hello.h
01D/src/: Hello.cpp  main.cpp
01E/: AppHello.rar  CMakeLists.txt  cmake-examples.conf
01E/include/export/: hello_export.h
01E/include/installing/: Hello.h
01E/src/: Hello.cpp  main.cpp
01F/: CMakeLists.txt  main.cpp
01G/: CMakeLists.txt  main.cpp
01H/: CMakeLists.txt  main.cpp
01H/cmake/FMT/lib/cmake/fmt/: fmt-targets.cmake
01H/cmake/FMT/lib/pkgconfig/: fmt.pc
01I/: README.md
01J/: CMakeLists.txt  README.md  main.cpp
01K/: CMakeLists.txt  main.cpp
01K/include/: CMakeLists.txt
